--- a/package.json
+++ b/package.json
@@ -2,21 +2,12 @@
   "name": "material-cra-ts",
   "version": "5.0.0",
   "private": true,
-  "dependencies": {
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
-    "@mui/material": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-scripts": "latest"
-  },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "lint": "eslint ."
+    "check": "npm run lint && npm run test && npm run build",
+    "lint": "eslint .",
+    "start": "react-scripts start",
+    "test": "jest"
   },
   "browserslist": {
     "production": [
@@ -30,8 +21,24 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/material": "5.11.10",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/react-test-renderer": "^18.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1"
+  },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "babel-jest": "^29.4.3",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
@@ -44,8 +51,14 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^27.5.1",
     "prettier": "^2.8.4",
+    "react-test-renderer": "^18.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "typescript-eslint": "^0.0.1-alpha.0"
+  },
+  "overrides": {
+    "nth-check": "2.0.1"
   }
 }
